<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AlloKit</string>
    <string name="address">Address</string>
    <string name="LocationisNotEnable">Please turn on GPS</string>
    <string name="needtoenable">Need to enable for automatic fetch address</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="my_order">My Orders</string>
    <string name="lan">தமிழ்</string>
    <string name="checkOut">Check Out</string>
    <string name="pay_type">Payment Type</string>
    <string name="addres_info">Address Information</string>
    <string name="orders">Orders</string>
    <string name="ReplyFromPoliceOfficers">Reply From AlloKit</string>
    <string name="Details">Details</string>
    <string name="Notification">Notification</string>
    <string name="Date">Date</string>
    <string name="Quantity">Quantity</string>
    <string name="orderon">Ordered On</string>
    <string name="totalamount">Total Amount</string>
    <string name="loading">Loading...</string>
    <string name="enter_address">Enter Address</string>
    <string name="your_order_sucessfull">Your Order Placed Successfully</string>
    <string name="dummy_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notification</string>
    <string name="title_mycart">MyOrders</string>
    <string name="my_profile">Profile</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="verify_code">Verification  Code</string>
    <string name="skip">Skip>></string>
    <string name="pls_enter_otp">Please Enter OTP</string>
    <string name="gerl_info">General Information</string>
    <string name="Verify">Verify</string>
    <string name="pls_enter_verify">Please type the verification code send \n to</string>
    <string name="buy">Buy</string>
    <string name="verify_your_otp">Please verify your OTP</string>
    <string name="verifyOTP">VerifyOTP</string>
    <string name="otp_miss_match">OTP Mis matched</string>
    <string name="app_title">AlloKit</string>
    <string name="verifide_otp">OTP Verified Successfully</string>
    <string name="cancel">Cancel</string>
    <string name="pincode">Pincode</string>
    <string name="Area">City , District</string>
    <string name="street">D.No, Street</string>
    <string name="save">Save</string>
    <string name="enter_stret">Enter D.no and Street name</string>
    <string name="enter_cityname">Enter City and District and State</string>
    <string name="enter_pincode">Enter PIN Code number</string>
    <string name="address_saved">Address Saved Successfully</string>
    <string name="pleas_fil_adress">Please fill your address in profile</string>
    <string name="invalid_pin">Please enter valid PIN code</string>
    <string name="district">State</string>
    <string name="change">Change</string>
    <string name="new_address_saved">New Address Saved</string>
    <string name="order_cancel">Your order removed successfully</string>
    <string name="current_location">Current location</string>
    <string name="item_list">Items list>></string>
    <string name="select">Select</string>
    <string name="digital">Digital (UPI)</string>
    <string name="cash">Cash</string>
    <string name="enter_valid_pincode">Would not able to buy for this PIN code</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="head2">Economy pack</string>
    <string name="dummy_content1">Economy pack Details</string>
    <string name="head3">Sanitary pack</string>
    <string name="dummy_content2">Sanitary pack Details</string>
    <string name="select_pin">Select PIN Code</string>
    <string name="empty_order">Your Order is Empty</string>
    <string name="my_cart">My Cart</string>
    <string name="remove">Remove</string>
    <string name="mycart">MyCart</string>
    <string name="add_cart">Add Cart</string>
    <string name="items_added_cart">"Items Added to Your Cart "</string>
    <string name="item_removed">Item Removed Successfully</string>


    <string name="rupeesString">Rs: %d</string>
    <string name="empty_cart">Your Cart is Empty</string>
    <string name="selct_item">Please select cart items</string>
</resources>
