<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_mycart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/mycart" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shop_black_24dp"
        android:title="@string/title_mycart" />



    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />


</menu>