<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustNothing"
    >

    <RelativeLayout
        android:id="@+id/title_lay"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <ImageView
            android:id="@+id/backImg"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="10dp"
            android:background="@drawable/back"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            />

        <TextView
            android:id="@+id/VerifyOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifyOTP"
            android:textSize="20sp"
            android:padding="16dp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="end"

            android:fontFamily="@font/psr"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textSize="26sp"
            android:layout_toRightOf="@id/backImg"
            android:layout_marginBottom="12dp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/psr"

            android:layout_alignParentBottom="true"/>

        <!--<ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"

            android:background="@drawable/circle_background_lite"
            android:src="@drawable/ic_shopping_cart_black_24dp"
            />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/circle_background_lite"
                android:src="@drawable/ic_shopping_cart_black_24dp"
                />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/circle_background_lite"
                android:src="@drawable/ic_shopping_cart_black_24dp"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/circle_background_lite"
                android:src="@drawable/ic_shopping_cart_black_24dp"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/lightGrey"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>




    <ScrollView
        android:layout_below="@id/title_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/gerl_info"
                android:fontFamily="@font/ps"
                android:textSize="16sp"/>
            <!--<View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"/>-->


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/psr"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:clickable="false"
                    android:focusable="false"
                    android:textSize="18sp"
                    />



            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/psr"
                    android:hint="@string/email"

                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    />



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phonenumberText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/psr"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textSize="18sp"
                    android:maxLength="10"
                    android:clickable="false"
                    android:focusable="false"
                    />



            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/lightGrey"/>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/addres_info"
                    android:fontFamily="@font/ps"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/save"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/psr"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"/>

            </RelativeLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <!-- <ImageView
                     android:id="@+id/gpsLocation"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="16dp"
                     android:src="@drawable/ic_my_location_black_24dp"
                     android:padding="10dp"
                     android:tint="@color/gray_scale"/>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/streetnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psr"
                        android:hint="@string/street"
                        android:textSize="18sp"
                        />



                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psr"
                        android:hint="@string/Area"
                        android:textSize="18sp"
                        />



                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psr"
                        android:hint="@string/district"
                        android:textSize="18sp"
                        />



                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/idPinceode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psr"
                        android:hint="@string/pincode"
                        android:textSize="18sp"
                        android:maxLength="6"
                        android:digits="0123456789"
                        android:inputType="number"
                        />



                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:visibility="gone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psr"
                        android:hint="@string/pincode"
                        android:textSize="18sp"
                        android:drawableRight="@drawable/ic_my_location_black_24dp"
                        />



                </com.google.android.material.textfield.TextInputLayout>

                <!--<com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psr"
                        android:hint="@string/address"
                        android:textSize="18sp"
                        android:drawableRight="@drawable/ic_my_location_black_24dp"
                        />



                </com.google.android.material.textfield.TextInputLayout>
-->


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>