<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustNothing"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_centerInParent="true">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:cardElevation="0dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/lightGrey">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_textsms_black_24dp"/>


            </androidx.cardview.widget.CardView>




            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_code"
                android:textSize="30sp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/psr"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/otpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/psr"
                android:gravity="center"
                android:text="Please type the verification code send \n to 7845923565"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                />



            <com.allocare.allokit.kitmodule.OtpEditText
                android:id="@+id/otpText"
                android:layout_marginTop="46dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="24sp"
                android:textIsSelectable="false"
                />


            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textSize="18sp"
               android:padding="16dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/colorBlack"
                android:layout_gravity="end"
                android:fontFamily="@font/psr"
                android:layout_alignParentBottom="true"/>


            <!-- <androidx.cardview.widget.CardView
                 android:id="@+id/resend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="16dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
                 app:cardBackgroundColor="@color/colorPrimary"
                 app:cardCornerRadius="4dp"
                 android:layout_marginTop="16dp"
                 android:layout_gravity="end">

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     android:fontFamily="@font/psr"
                     android:padding="8dp"
                     android:text="Resend"
                     android:textColor="@color/colorWhite"
                     android:textSize="18sp" />


             </androidx.cardview.widget.CardView>-->



        </LinearLayout>


    </ScrollView>





    <RelativeLayout
        android:id="@+id/bottomLay"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">



        <androidx.cardview.widget.CardView
            android:id="@+id/verrifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/verifytxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/psr"
                android:padding="8dp"
                android:text="@string/Verify"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>